# qr-code

./: README.md  app.py  db.sqlite3  pyproject.toml  python-version  requirements.txt
backend/: settings.py  urls.py
commands/: secret.sh
generator/: forms.py  models.py  views.py
generator/migrations/: 0001_initial.py  0002_auto_20210718_2209.py
generator/templates/: about_view.html
generator/templates/components/: form.html  header.html
src/: settings.py  urls.py
templates/: about_view.html  base.html  generate.html  home_view.html
templates/components/: form.html  header.html
templates/css/: bootstrap.html  tailwind.html
templates/js/: js.html
