[tool.poetry]
name = "qr-code"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<3.3"
python-decouple = "^3.8"
django-qr-code = "2.2.0"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
